--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect": "^3.7.0",
     "express": "^4.17.1",
     "express-route-controller": "0.0.4",
-    "onesignal": "^0.1.2"
+    "onesignal": "^0.1.2",
+    "serve-static": "^1.14.1"
   }
 }
